--- a/client-jss/src/app/main/components/podcasts/podcasts.component.html
+++ b/client-jss/src/app/main/components/podcasts/podcasts.component.html
@@ -77,7 +77,7 @@
                             src="/assets/images/premium-icon.svg">
                           {{post.titleText}}
                         </h4>
-                        <p class="" [innerHTML]="post.excerptText| trustHtml"> </p>
+                        <p class="">{{post.excerptText}} </p>
                       </div>
                     </div>
                   </div>
