--- a/client-jss/src/app/main/components/post-serie-header/post-serie-header.component.html
+++ b/client-jss/src/app/main/components/post-serie-header/post-serie-header.component.html
@@ -14,7 +14,7 @@
                 <div>
                   <p class="text-muted mb-1">Spécial série</p>
                   <h3 class="fw-bold mb-2">{{ selectedSerie.name }}</h3>
-                  <div class="text-body" [innerHTML]="selectedSerie.excerptText | trustHtml"></div>
+                  <div class="text-body">{{selectedSerie.excerptText}}</div>
                 </div>
               </div>
             </div>
