fix generic textarea label

--- a/client-jss/src/app/main/components/generic-textarea/generic-textarea.component.html
+++ b/client-jss/src/app/main/components/generic-textarea/generic-textarea.component.html
@@ -3,7 +3,7 @@
     <label [for]="'fl-text'+uniqueId" *ngIf="isDisplayLabel && label && label.length>0"
       class="form-label">{{label}}</label>
     <textarea (keyup)="onInputChange()" (keydown)="onInputChange()" (paste)="onInputChange()" [rows]="numberOfLines"
-      matInput [formControlName]="propertyName" [placeholder]="placeholder" [maxlength]="maxLength+''"
+      matInput [formControlName]="propertyName" [placeholder]="label" [maxlength]="maxLength+''"
       [required]="isMandatory" [minlength]="minLength+''" class="form-control"></textarea>
   </div>
 </div>
