--- a/client-jss/src/app/main/components/contribute/contribute.component.html
+++ b/client-jss/src/app/main/components/contribute/contribute.component.html
@@ -95,7 +95,7 @@
                   </div>
                 </div>
                 <div class="col-sm-12 px-4">
-                  <button class="btn btn-lg contact-btn rounded-1 w-100" (click)="subscribeFormContact($event)">Envoyer
+                  <button class="btn btn-lg contact-btn rounded-1 w-100" (click)="contributeContactForm($event)">Envoyer
                   </button>
                 </div>
               </form>
