--- a/client-jss/src/app/main/components/header/header.component.css
+++ b/client-jss/src/app/main/components/header/header.component.css
@@ -2,27 +2,6 @@
   border-left: 1px solid #858C97;
 }
 
-.social-icon {
-  width: 32px;
-  height: 32px;
-  background-color: #CCE1FA;
-  color: #1C2D41;
-  /* border-radius: 6px; */
-  font-size: 14px;
-  text-decoration: none;
-  transition: background-color 0.3s, color 0.3s;
-
-  &:hover {
-    background-color: #B5D1F3;
-    color: #0F1E2E;
-  }
-}
-
-.middle-link {
-  border-left: 1px solid var(--ar-primary);
-  border-right: 1px solid var(--ar-primary);
-}
-
 .nav-item-podcast {
   padding-top: 0.8rem;
 }
@@ -38,4 +17,25 @@
 .dropdown-menu .dropdown-item:hover {
   background-color: #CCE1FA;
   color: #1C2D41;
+}
+
+.btn-fixed-secondary {
+  max-height: 45px;
+}
+
+.btn-fixed-secondary:hover {
+  background-color: #1C2D41;
+  color: var(--ar-tertiary-bg);
+}
+
+.btn-yellow:hover {
+  color: var(--ar-primary);
+}
+
+.btn-yellow-burger:hover {
+  color: var(--ar-tertiary-bg);
+}
+
+.header-navbar-bottom .navbar-nav>li:first-child>a {
+  padding-left: 1rem !important;
 }
