--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -186,7 +186,7 @@
           </div>
 
           <!-- Ile-de-france -->
-          <div class="mb-3 border border-light card">
+          <div *ngIf="idf" class="mb-3 border border-light card">
             <div class="wrapper p-3">
               <div class="row">
                 <div class="col-md-12">
