--- a/client-jss/src/assets/css/style.css
+++ b/client-jss/src/assets/css/style.css
@@ -3408,8 +3408,7 @@ fieldset:disabled .btn {
 }
 
 .btn-yellow:hover {
-  color: var(--ar-primary);
-  opacity: 80%;
+  color: var(--ar-tertiary-bg);
   border-color: var(--ar-tertiary-bg);
 }
 
@@ -12229,7 +12228,7 @@ blockquote p {
 }
 
 .header-navbar-bottom .navbar-nav>li>a, .header-navbar-bottom .navbar-nav>li>span>a {
-  color: #ffffffb9;
+  color: var(--ar-secondary);
   font-weight: 600;
   font-size: 14px;
   position: relative;
